--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Bernice Johnson-->
-<!-- Project 3-->
-<!-- Visual Frameworks 12/06-->
+<!-- Project 1-->
+<!-- MiU 12/07-->
 <html>
     <head>
     	 <!--Meta content gives the browser some information about our document. -->
